src/objects/tgn__Test_Gen__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tgn__Assertion_Level__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Assertion Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Async_Job_Id__c</fullName>
        <label>Async Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Code_Coverage__c</fullName>
        <label>Code Coverage</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tgn__Exception_Level__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Exception Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tgn__Is_Initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Initialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tgn__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Last_Run_Time__c</fullName>
        <label>Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Last_Sync_Time__c</fullName>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tgn__Scheduled_Jobs__c</fullName>
        <label>Scheduled Jobs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Test_Class_Extension__c</fullName>
        <label>Test Class Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tgn__Test_Job_Id__c</fullName>
        <label>Test Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Test Gen</label>
</CustomObject>